--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@mui/material": "^5.16.6",
     "@types/eventsource": "^1.1.15",
     "@types/jwt-decode": "^3.1.0",
     "axios": "^1.7.2",
@@ -24,6 +25,7 @@
     "zustand": "^4.5.4"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-router-dom": "^5.3.3"
