--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
     "@types/eventsource": "^1.1.15",
     "@types/jwt-decode": "^3.1.0",
