[test] 커스텀 도메인 테스트

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,5 +46,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://gun9311.github.io/Lab-Assistant"
+  "homepage": "https://www.t-bot.site"
 }
