--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -40,10 +40,16 @@ jobs:
         if: github.ref == 'refs/heads/main'
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
+            sudo usermod -aG docker ${{ secrets.SSH_USER }}
+            newgrp docker <<EONG
             docker pull ${{ secrets.DOCKER_USERNAME }}/lab-frontend:latest
             docker stop lab-frontend || true
             docker rm lab-frontend || true
-            docker run -d --name lab-frontend -p 80:80 --network=host ${{ secrets.DOCKER_USERNAME }}/lab-frontend:latest
+            docker run -d --name lab-frontend -p 80:80 \
+              -e REACT_APP_WEBSOCKET_URL=${{ secrets.REACT_APP_WEBSOCKET_URL }} \
+              -e REACT_APP_API_URL=${{ secrets.REACT_APP_API_URL }} \
+              ${{ secrets.DOCKER_USERNAME }}/lab-frontend:latest
+            EONG
           EOF
         env:
           SSH_USER: ${{ secrets.SSH_USER }}
