--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -40,16 +40,11 @@ jobs:
         if: github.ref == 'refs/heads/main'
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
-            sudo usermod -aG docker ${{ secrets.SSH_USER }}
-            docker pull ${{ secrets.DOCKER_USERNAME }}/lab-frontend:latest
-            docker stop lab-frontend || true
-            docker rm lab-frontend || true
-            docker run -d --name lab-frontend -p 8080:80 \
-              -e REACT_APP_WEBSOCKET_URL=${{ secrets.REACT_APP_WEBSOCKET_URL }} \
-              -e REACT_APP_API_URL=${{ secrets.REACT_APP_API_URL }} \
-              ${{ secrets.DOCKER_USERNAME }}/lab-frontend:latest
+            docker-compose -f /path/to/docker-compose.yml up -d lab-frontend
           EOF
         env:
           SSH_USER: ${{ secrets.SSH_USER }}
           SERVER_IP: ${{ secrets.SERVER_IP }}
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          REACT_APP_WEBSOCKET_URL: ${{ secrets.REACT_APP_WEBSOCKET_URL }}
+          REACT_APP_API_URL: ${{ secrets.REACT_APP_API_URL }}
