--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -40,7 +40,11 @@ jobs:
         if: github.ref == 'refs/heads/main'
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
-            docker-compose -f /path/to/docker-compose.yml up -d lab-frontend
+            sudo usermod -aG docker ${{ secrets.SSH_USER }}
+            docker pull ${{ secrets.DOCKER_USERNAME }}/lab-frontend:latest
+            docker stop lab-frontend || true
+            docker rm lab-frontend || true
+            docker-compose -f /home/ubuntu/docker-compose.yml up -d lab-frontend
           EOF
         env:
           SSH_USER: ${{ secrets.SSH_USER }}
