--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -40,6 +40,20 @@ jobs:
         if: github.ref == 'refs/heads/main'
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
+            export DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }}
+            export MONGODB_URL=${{ secrets.MONGODB_URL }}
+            export JWT_SECRET=${{ secrets.JWT_SECRET }}
+            export JWT_REFRESH_SECRET=${{ secrets.JWT_REFRESH_SECRET }}
+            export REDIS_URL=${{ secrets.REDIS_URL }}
+            export SESSION_SECRET=${{ secrets.SESSION_SECRET }}
+            export OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}
+            export SQS_REGION=${{ secrets.SQS_REGION }}
+            export QUIZ_QUEUE_URL=${{ secrets.QUIZ_QUEUE_URL }}
+            export REPORT_QUEUE_URL=${{ secrets.REPORT_QUEUE_URL }}
+            export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
+            export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            export REACT_APP_WEBSOCKET_URL=${{ secrets.REACT_APP_WEBSOCKET_URL }}
+            export REACT_APP_API_URL=${{ secrets.REACT_APP_API_URL }}
             docker-compose -f /home/ubuntu/docker-compose.yml up -d lab-backend
           EOF
         env:
