--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -45,8 +45,6 @@ jobs:
             docker stop lab-frontend || true
             docker rm lab-frontend || true
             export DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }}
-            export REACT_APP_WEBSOCKET_URL=${{ secrets.REACT_APP_WEBSOCKET_URL }}
-            export REACT_APP_API_URL=${{ secrets.REACT_APP_API_URL }}
             export MONGODB_URL=${{ secrets.MONGODB_URL }}
             export JWT_SECRET=${{ secrets.JWT_SECRET }}
             export JWT_REFRESH_SECRET=${{ secrets.JWT_REFRESH_SECRET }}
@@ -58,8 +56,25 @@ jobs:
             export REPORT_QUEUE_URL=${{ secrets.REPORT_QUEUE_URL }}
             export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
             export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
-            docker-compose -f /home/ubuntu/docker-compose.yml up -d lab-frontend
+            export REACT_APP_WEBSOCKET_URL=${{ secrets.REACT_APP_WEBSOCKET_URL }}
+            export REACT_APP_API_URL=${{ secrets.REACT_APP_API_URL }}
+            docker-compose -f /home/ubuntu/docker-compose.yml up -d lab-backend
           EOF
         env:
           SSH_USER: ${{ secrets.SSH_USER }}
           SERVER_IP: ${{ secrets.SERVER_IP }}
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          MONGODB_URL: ${{ secrets.MONGODB_URL }}
+          JWT_SECRET: ${{ secrets.JWT_SECRET }}
+          JWT_REFRESH_SECRET: ${{ secrets.JWT_REFRESH_SECRET }}
+          REDIS_URL: ${{ secrets.REDIS_URL }}
+          SESSION_SECRET: ${{ secrets.SESSION_SECRET }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          SQS_REGION: ${{ secrets.SQS_REGION }}
+          QUIZ_QUEUE_URL: ${{ secrets.QUIZ_QUEUE_URL }}
+          REPORT_QUEUE_URL: ${{ secrets.REPORT_QUEUE_URL }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          REACT_APP_WEBSOCKET_URL: ${{ secrets.REACT_APP_WEBSOCKET_URL }}
+          REACT_APP_API_URL: ${{ secrets.REACT_APP_API_URL }}
+
