--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,6 +3,12 @@ FROM node:20 AS builder
 
 WORKDIR /app
 
+# 환경 변수 전달
+ARG REACT_APP_API_URL
+ARG REACT_APP_WEBSOCKET_URL
+ENV REACT_APP_API_URL=$REACT_APP_API_URL
+ENV REACT_APP_WEBSOCKET_URL=$REACT_APP_WEBSOCKET_URL
+
 COPY package*.json yarn.lock ./
 RUN yarn install
 
