--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,32 @@
 # 백엔드 빌드 단계
-FROM node:20
+FROM node:20 AS builder
 
 WORKDIR /app
+
+# 환경 변수 전달
+ARG MONGODB_URL
+ARG JWT_SECRET
+ARG JWT_REFRESH_SECRET
+ARG REDIS_URL
+ARG SESSION_SECRET
+ARG OPENAI_API_KEY
+ARG SQS_REGION
+ARG QUIZ_QUEUE_URL
+ARG REPORT_QUEUE_URL
+ARG AWS_ACCESS_KEY_ID
+ARG AWS_SECRET_ACCESS_KEY
+
+ENV MONGODB_URL=$MONGODB_URL
+ENV JWT_SECRET=$JWT_SECRET
+ENV JWT_REFRESH_SECRET=$JWT_REFRESH_SECRET
+ENV REDIS_URL=$REDIS_URL
+ENV SESSION_SECRET=$SESSION_SECRET
+ENV OPENAI_API_KEY=$OPENAI_API_KEY
+ENV SQS_REGION=$SQS_REGION
+ENV QUIZ_QUEUE_URL=$QUIZ_QUEUE_URL
+ENV REPORT_QUEUE_URL=$REPORT_QUEUE_URL
+ENV AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
+ENV AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
 
 COPY package*.json yarn.lock ./
 RUN yarn install
