--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -15,24 +15,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v1
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          node-version: '20' # 사용 중인 Node.js 버전으로 변경
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: ./frontend
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/lab-frontend:latest
-          build-args: |
-            REACT_APP_API_URL=${{ secrets.REACT_APP_API_URL }}
-            REACT_APP_WEBSOCKET_URL=${{ secrets.REACT_APP_WEBSOCKET_URL }}
+      - name: Install dependencies and build
+        run: |
+          cd frontend
+          yarn install
+          yarn build
 
       - name: Set up SSH agent
         uses: webfactory/ssh-agent@v0.5.3
@@ -43,9 +35,12 @@ jobs:
         if: github.ref == 'refs/heads/main'
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
-            sudo usermod -aG docker ${{ secrets.SSH_USER }}
-            docker pull ${{ secrets.DOCKER_USERNAME }}/lab-frontend:latest
-            docker stop lab-frontend || true
-            docker rm lab-frontend || true
-            DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }} docker-compose -f /home/ubuntu/docker-compose.yml up -d lab-frontend
+            # 빌드된 정적 파일을 서버의 Nginx 컨테이너 디렉토리로 복사
+            rsync -av --delete frontend/build/ /path/to/nginx/html/
+
+            # 백엔드 컨테이너 업데이트
+            docker pull ${{ secrets.DOCKER_USERNAME }}/lab-backend:latest
+            docker stop lab-backend || true
+            docker rm lab-backend || true
+            docker-compose -f /home/ubuntu/docker-compose.yml up -d lab-backend nginx
           EOF
