--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -31,14 +31,26 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
+      - name: Add server to known_hosts
+        run: |
+          ssh-keyscan -H ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts
+
       - name: Deploy to Server
         if: github.ref == 'refs/heads/main'
         run: |
-          scp -r frontend/build/* ${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }}:/path/to/nginx/html/
-
+          scp -r frontend/build/* ${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }}:/usr/share/nginx/html/
           ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
-            docker-compose -f /home/ubuntu/docker-compose.yml up -d nginx
+            docker-compose -f /home/${{ secrets.SSH_USER }}/docker-compose.yml up -d nginx
           EOF
+
+      # - name: Deploy to Server
+      #   if: github.ref == 'refs/heads/main'
+      #   run: |
+      #     scp -r frontend/build/* ${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }}:/path/to/nginx/html/
+
+      #     ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
+      #       docker-compose -f /home/ubuntu/docker-compose.yml up -d nginx
+      #     EOF
           # ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
           #   # 빌드된 정적 파일을 서버의 Nginx 컨테이너 디렉토리로 복사
           #   rsync -av --delete frontend/build/ /path/to/nginx/html/
