--- a/.github/workflows/deploy-quizWorker.yml
+++ b/.github/workflows/deploy-quizWorker.yml
@@ -21,7 +21,9 @@ jobs:
           node-version: '20'
 
       - name: Install Node.js dependencies
-        run: yarn install
+        run: |
+          cd quizWorker
+          yarn install
 
       - name: Set up Python
         uses: actions/setup-python@v2
@@ -30,6 +32,7 @@ jobs:
 
       - name: Install Python dependencies
         run: |
+          cd quizWorker
           python3 -m venv venv
           source venv/bin/activate
           pip install -r requirements.txt
@@ -38,7 +41,7 @@ jobs:
       #  run: yarn test
 
       - name: Build Docker image
-        run: docker build -t quizWorker .
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/quizWorker .
 
       - name: Push Docker image to Docker Hub
         env:
@@ -46,17 +49,16 @@ jobs:
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: |
           echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
-          docker tag lab-assistant $DOCKER_USERNAME/quizWorker:latest
-          docker push $DOCKER_USERNAME/quizWorker:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/quizWorker:latest
 
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v0.1.4
         with:
           host: ${{ secrets.WORKER_IP }}
           username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_PRIATE_KEY }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            docker pull $DOCKER_USERNAME/quizWorker:latest
+            docker pull ${{ secrets.DOCKER_USERNAME }}/quizWorker:latest
             docker stop quizWorker-container || true
             docker rm quizWorker-container || true
-            docker run -d --name quizWorker-container -p 3000:3000 $DOCKER_USERNAME/quizWorker:latest
+            docker run -d --name quizWorker-container -p 3000:3000 ${{ secrets.DOCKER_USERNAME }}/quizWorker:latest
