--- a/.github/workflows/deploy-quizWorker.yml
+++ b/.github/workflows/deploy-quizWorker.yml
@@ -40,18 +40,22 @@ jobs:
       #- name: Run tests
       #  run: yarn test
 
-      - name: Build Docker image
+      - name: Test SSH connection
         run: |
-          cd quizWorker
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/quizworker:latest .
+          ssh -i ${{ secrets.SSH_PRIVATE_KEY }} -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.WORKER_IP }} echo "SSH connection test successful"
 
-      - name: Push Docker image to Docker Hub
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        run: |
-          echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
-          docker push ${{ secrets.DOCKER_USERNAME }}/quizworker:latest
+      # - name: Build Docker image
+      #   run: |
+      #     cd quizWorker
+      #     docker build -t ${{ secrets.DOCKER_USERNAME }}/quizworker:latest .
+
+      # - name: Push Docker image to Docker Hub
+      #   env:
+      #     DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+      #     DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+      #   run: |
+      #     echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
+      #     docker push ${{ secrets.DOCKER_USERNAME }}/quizworker:latest
 
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v0.1.4
