--- a/quizWorker/package.json
+++ b/quizWorker/package.json
@@ -5,8 +5,11 @@
   "license": "MIT",
   "dependencies": {
     "@aws-sdk/client-sqs": "^3.624.0",
+    "@aws-sdk/client-sso-oidc": "^3.614.0",
+    "@aws-sdk/client-sts": "^3.624.0",
     "@aws-sdk/credential-providers": "^3.621.0",
     "child_process": "^1.0.2",
+    "dotenv": "^16.4.5",
     "mongoose": "^8.5.2"
   }
 }
