[fix] node alpine -> node로 이미지 변경

--- a/quizWorker/Dockerfile
+++ b/quizWorker/Dockerfile
@@ -32,7 +32,7 @@ COPY . .
 RUN chmod +x similarity.py
 
 # Production image
-FROM node:20-alpine
+FROM node:20
 
 # Set the working directory
 WORKDIR /app
