--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -46,5 +46,5 @@ jobs:
           scp -r frontend/build/* ${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }}:/home/${{ secrets.SSH_USER }}/html/
           # 서버에 연결하여 배포 처리
           ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
-            docker-compose -f /home/${{ secrets.SSH_USER }}/docker-compose.yml up -d nginx
+            DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }} docker-compose -f /home/${{ secrets.SSH_USER }}/docker-compose.yml up -d nginx
           EOF
