--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -15,6 +15,7 @@ ARG QUIZ_QUEUE_URL
 ARG REPORT_QUEUE_URL
 ARG AWS_ACCESS_KEY_ID
 ARG AWS_SECRET_ACCESS_KEY
+ARG FIREBASE_PRIVATE_KEY
 
 ENV MONGODB_URL=$MONGODB_URL
 ENV JWT_SECRET=$JWT_SECRET
@@ -27,6 +28,7 @@ ENV QUIZ_QUEUE_URL=$QUIZ_QUEUE_URL
 ENV REPORT_QUEUE_URL=$REPORT_QUEUE_URL
 ENV AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
 ENV AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
+ENV FIREBASE_PRIVATE_KEY=$FIREBASE_PRIVATE_KEY
 
 COPY package*.json yarn.lock ./
 RUN yarn install
