--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "firebase-admin": "^12.3.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
     "node-cron": "^3.0.3",
