--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@types/eventsource": "^1.1.15",
     "@types/jwt-decode": "^3.1.0",
     "axios": "^1.7.2",
+    "firebase": "^10.12.5",
     "http-proxy-middleware": "^3.0.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
