--- a/lambd-reportWorker/package.json
+++ b/lambd-reportWorker/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.7.4",
     "dotenv": "^16.4.5",
     "mongoose": "^8.5.2"
   }
