[fix] 유사도 모델 변경

--- a/quizWorker/Dockerfile
+++ b/quizWorker/Dockerfile
@@ -49,7 +49,7 @@ ARG SQS_REGION
 ARG QUIZ_QUEUE_URL
 ARG AWS_ACCESS_KEY_ID
 ARG AWS_SECRET_ACCESS_KEY
-ARG NOTIFICATION_API_URL
+ARG QUIZ_NOTIFICATION_API_URL
 
 # ENV variables
 ENV MONGODB_URL=${MONGODB_URL}
@@ -57,7 +57,7 @@ ENV SQS_REGION=${SQS_REGION}
 ENV QUIZ_QUEUE_URL=${QUIZ_QUEUE_URL}
 ENV AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
 ENV AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
-ENV NOTIFICATION_API_URL=${NOTIFICATION_API_URL}
+ENV QUIZ_NOTIFICATION_API_URL=${QUIZ_NOTIFICATION_API_URL}
 
 # Specify the command to run the application
 CMD ["node", "quizWorker.js"]
