--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,12 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "license": "MIT",
   "dependencies": {
     "@aws-sdk/client-sqs": "^3.622.0",
     "@aws-sdk/credential-providers": "^3.622.0",
+    "artillery": "^2.0.19",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "connect-redis": "^7.1.1",
@@ -21,5 +22,13 @@
     "redis": "^4.7.0",
     "uuid": "^10.0.0",
     "ws": "^8.18.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
+  },
+  "scripts": {
+    "test": "jest",
+    "start": "node server.js"
   }
 }
