--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "openai": "^4.54.0",
     "redis": "^4.7.0",
     "uuid": "^10.0.0",
+    "winston": "^3.14.2",
     "ws": "^8.18.0"
   },
   "devDependencies": {
