--- a/.github/workflows/deploy-quizWorker.yml
+++ b/.github/workflows/deploy-quizWorker.yml
@@ -27,6 +27,9 @@ jobs:
 
       # Node.js 이미지 빌드 및 푸시
       - name: Build and Push Node.js Docker Image
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: |
           cd quizWorker
           docker build --build-arg MONGODB_URL=${{ secrets.MONGODB_URL }} \
@@ -41,6 +44,9 @@ jobs:
 
       # Flask 서버 이미지 빌드 및 푸시
       - name: Build and Push Flask Docker Image
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: |
           cd quizWorker
           docker build -f Dockerfile-flask -t ${{ secrets.DOCKER_USERNAME }}/quizworker-flask:latest .
