--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,11 @@
   "main": "server.js",
   "license": "MIT",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.658.0",
     "@aws-sdk/client-sqs": "^3.622.0",
     "@aws-sdk/credential-providers": "^3.622.0",
     "artillery": "^2.0.19",
+    "aws-sdk": "^2.1691.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "connect-redis": "^7.1.1",
@@ -17,9 +19,13 @@
     "firebase-admin": "^12.3.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "node-cron": "^3.0.3",
     "openai": "^4.54.0",
     "redis": "^4.7.0",
+    "redisson": "^0.0.0",
+    "redlock": "^5.0.0-beta.2",
     "uuid": "^10.0.0",
     "winston": "^3.14.2",
     "ws": "^8.18.0"
