--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -16,6 +16,10 @@ ARG REPORT_QUEUE_URL
 ARG AWS_ACCESS_KEY_ID
 ARG AWS_SECRET_ACCESS_KEY
 ARG FIREBASE_PRIVATE_KEY
+ARG S3_ACCESS_KEY_ID
+ARG S3_SECRET_ACCESS_KEY
+ARG S3_REGION
+ARG S3_BUCKET_NAME
 
 ENV MONGODB_URL=$MONGODB_URL
 ENV JWT_SECRET=$JWT_SECRET
@@ -29,6 +33,10 @@ ENV REPORT_QUEUE_URL=$REPORT_QUEUE_URL
 ENV AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
 ENV AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
 ENV FIREBASE_PRIVATE_KEY=$FIREBASE_PRIVATE_KEY
+ENV S3_ACCESS_KEY_ID=$S3_ACCESS_KEY_ID
+ENV S3_SECRET_ACCESS_KEY=$S3_SECRET_ACCESS_KEY
+ENV S3_REGION=$S3_REGION
+ENV S3_BUCKET_NAME=$S3_BUCKET_NAME
 
 COPY package*.json yarn.lock ./
 RUN yarn install
