--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "http-proxy-middleware": "^3.0.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.0",
     "react-scripts": "^5.0.1",
