--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,8 +6,14 @@ WORKDIR /app
 # 환경 변수 전달
 ARG REACT_APP_API_URL
 ARG REACT_APP_WEBSOCKET_URL
+ARG JWT_SECRET
+ARG REACT_APP_GOOGLE_CLIENT_ID
+ARG REACT_APP_GOOGLE_CLIENT_ID
 ENV REACT_APP_API_URL=$REACT_APP_API_URL
 ENV REACT_APP_WEBSOCKET_URL=$REACT_APP_WEBSOCKET_URL
+ENV JWT_SECRET=$JWT_SECRET
+ENV REACT_APP_GOOGLE_REDIRECT_URI=$REACT_APP_GOOGLE_REDIRECT_URI
+ENV REACT_APP_GOOGLE_REDIRECT_URI=$REACT_APP_GOOGLE_REDIRECT_URI
 
 COPY package*.json yarn.lock ./
 RUN yarn install
