--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -15,11 +15,17 @@ ARG QUIZ_QUEUE_URL
 ARG REPORT_QUEUE_URL
 ARG AWS_ACCESS_KEY_ID
 ARG AWS_SECRET_ACCESS_KEY
+ARG AWS_REGION
+ARG AWS_SES_VERIFIED_EMAIL
 ARG FIREBASE_PRIVATE_KEY
 ARG S3_ACCESS_KEY_ID
 ARG S3_SECRET_ACCESS_KEY
 ARG S3_REGION
 ARG S3_BUCKET_NAME
+ARG GOOGLE_CLIENT_ID
+ARG GOOGLE_CLIENT_SECRET
+ARG GOOGLE_REDIRECT_URI
+ARG CLIENT_URL
 
 ENV MONGODB_URL=$MONGODB_URL
 ENV JWT_SECRET=$JWT_SECRET
@@ -32,11 +38,17 @@ ENV QUIZ_QUEUE_URL=$QUIZ_QUEUE_URL
 ENV REPORT_QUEUE_URL=$REPORT_QUEUE_URL
 ENV AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
 ENV AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
+ENV AWS_REGION=$AWS_REGION
+ENV AWS_SES_VERIFIED_EMAIL=$AWS_SES_VERIFIED_EMAIL
 ENV FIREBASE_PRIVATE_KEY=$FIREBASE_PRIVATE_KEY
 ENV S3_ACCESS_KEY_ID=$S3_ACCESS_KEY_ID
 ENV S3_SECRET_ACCESS_KEY=$S3_SECRET_ACCESS_KEY
 ENV S3_REGION=$S3_REGION
 ENV S3_BUCKET_NAME=$S3_BUCKET_NAME
+ENV GOOGLE_CLIENT_ID=$GOOGLE_CLIENT_ID
+ENV GOOGLE_CLIENT_SECRET=$GOOGLE_CLIENT_SECRET
+ENV GOOGLE_REDIRECT_URI=$GOOGLE_REDIRECT_URI
+ENV CLIENT_URL=$CLIENT_URL
 
 COPY package*.json yarn.lock ./
 RUN yarn install
