--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.658.0",
+    "@aws-sdk/client-ses": "^3.699.0",
     "@aws-sdk/client-sqs": "^3.622.0",
     "@aws-sdk/credential-providers": "^3.622.0",
     "artillery": "^2.0.19",
@@ -18,11 +19,13 @@
     "express-session": "^1.18.0",
     "firebase-admin": "^12.3.1",
     "google-auth-library": "^9.15.0",
+    "googleapis": "^144.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.16",
     "openai": "^4.54.0",
     "redis": "^4.7.0",
     "redisson": "^0.0.0",
