[fix] 퀴즈 디자인 개선, 타이머 종료시간 기준으로 변경

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,14 +1,14 @@
 {
-  "short_name": "EduApp",
-  "name": "Education App",
+  "short_name": "넛지EDU",
+  "name": "넛지EDU",
   "icons": [
     {
-      "src": "icon.png",
+      "src": "nudge-logo.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "large-icon.png",
+      "src": "nudge-logo.png",
       "sizes": "512x512",
       "type": "image/png"
     }
