[fix] 로거, ses 분리, 채팅내역조회 및 성능 개선

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -26,7 +26,7 @@ ARG GOOGLE_CLIENT_ID
 ARG GOOGLE_CLIENT_SECRET
 ARG GOOGLE_REDIRECT_URI
 ARG CLIENT_URL
-
+ARG TEACHER_AUTH_CODE
 ENV MONGODB_URL=$MONGODB_URL
 ENV JWT_SECRET=$JWT_SECRET
 ENV JWT_REFRESH_SECRET=$JWT_REFRESH_SECRET
@@ -49,6 +49,7 @@ ENV GOOGLE_CLIENT_ID=$GOOGLE_CLIENT_ID
 ENV GOOGLE_CLIENT_SECRET=$GOOGLE_CLIENT_SECRET
 ENV GOOGLE_REDIRECT_URI=$GOOGLE_REDIRECT_URI
 ENV CLIENT_URL=$CLIENT_URL
+ENV TEACHER_AUTH_CODE=$TEACHER_AUTH_CODE
 
 COPY package*.json yarn.lock ./
 RUN yarn install
