--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "aws-sdk": "^2.1691.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "compression": "^1.8.0",
     "connect-redis": "^7.1.1",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
