[fect] 학생 제한시간 추가, [fix]로고 수정

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -3,12 +3,12 @@
   "name": "넛지EDU",
   "icons": [
     {
-      "src": "nudge-logo.png",
+      "src": "nudge_logo_192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "nudge-logo.png",
+      "src": "nudge_logo_512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
