[fix] 챗봇 antrophic으로 변경

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,6 +10,7 @@ ARG JWT_REFRESH_SECRET
 ARG REDIS_URL
 ARG SESSION_SECRET
 ARG OPENAI_API_KEY
+ARG ANTHROPIC_API_KEY
 ARG SQS_REGION
 ARG QUIZ_QUEUE_URL
 ARG REPORT_QUEUE_URL
@@ -34,6 +35,7 @@ ENV JWT_REFRESH_SECRET=$JWT_REFRESH_SECRET
 ENV REDIS_URL=$REDIS_URL
 ENV SESSION_SECRET=$SESSION_SECRET
 ENV OPENAI_API_KEY=$OPENAI_API_KEY
+ENV ANTHROPIC_API_KEY=$ANTHROPIC_API_KEY
 ENV SQS_REGION=$SQS_REGION
 ENV QUIZ_QUEUE_URL=$QUIZ_QUEUE_URL
 ENV REPORT_QUEUE_URL=$REPORT_QUEUE_URL
