--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "main": "server.js",
   "license": "MIT",
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.52.0",
     "@aws-sdk/client-s3": "^3.658.0",
     "@aws-sdk/client-ses": "^3.699.0",
     "@aws-sdk/client-sqs": "^3.622.0",
