[fect] 평어 neis 전송 기능, 평어 편집 기능, 2학년 추가

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/chrome": "^0.0.323",
     "@types/lodash": "^4.17.16",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
