[fix] 퀴즈 ui 개선, [fect] seo 추가

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,22 +21,26 @@
     "@react-spring/web": "^9.7.5",
     "@types/chart.js": "^2.9.41",
     "@types/eventsource": "^1.1.15",
+    "@types/howler": "^2.2.12",
     "@types/jwt-decode": "^3.1.0",
     "axios": "^1.8.4",
     "chart.js": "^4.4.7",
     "chartjs-plugin-datalabels": "^2.2.0",
     "date-fns": "^4.1.0",
     "firebase": "^10.12.5",
+    "howler": "^2.2.4",
     "http-proxy-middleware": "^3.0.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.2.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^18.3.1",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^6.25.0",
     "react-scripts": "^5.0.1",
+    "react-spring": "^10.0.1",
     "recharts": "^2.15.3",
     "remark-gfm": "^4.0.1",
     "typeface-montserrat": "^1.1.13",
