[fix] getStudents 정규표현식 특수문자 이스케이프 처리

--- a/backend/package.json
+++ b/backend/package.json
@@ -43,6 +43,9 @@
   },
   "scripts": {
     "test": "jest",
-    "start": "node server.js"
+    "start": "node server.js",
+    "test:websocket": "node tests/performance/websocket-broadcast-test.js",
+    "test:websocket:single": "node tests/performance/websocket-broadcast-test.js --single",
+    "test:performance": "node tests/performance/report-generation-performance.test.js"
   }
 }
